--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,11 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,7 +11,10 @@
 }
 
 body {
-  margin: 0;
+  background-image: linear-gradient(to bottom, rgb(5,215,222) 0%,rgb(15,120,160) 100%);
+  height: 100vh;
+  width: 400px;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -23,22 +22,8 @@ body {
 #submit {
   text-align: center;
   width: 200px;
-  bottom: 1px;
   font-size: 16px;
   cursor: pointer;
-  background-color: rgb(203, 27, 27);
+  background-color: rgb(244, 116, 103);
   padding: 6px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
