--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,13 +11,16 @@
 }
 
 body {
-  background-image: linear-gradient(to bottom, rgb(5,215,222) 0%,rgb(15,120,160) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgb(5, 215, 222) 0%,
+    rgb(15, 120, 160) 100%
+  );
   height: 100vh;
   width: 400px;
   margin: 0 auto;
   padding: 0;
 }
-
 
 #submit {
   text-align: center;
